v0.10.0/_sources/projections/misc/misc_robinson.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/misc/misc_robinson.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_misc_misc_robinson.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_misc_misc_robinson.py:


Robinson
========

The Robinson projection, presented by the American geographer and cartographer
Arthur H. Robinson in 1963, is a modified cylindrical projection that is
neither conformal nor equal-area. Central meridian and all parallels are
straight lines; other meridians are curved. It uses lookup tables rather than
analytic expressions to make the world map "look" right [#f1]_.
The scale is true along latitudes 38° north and south. The projection was
originally developed for use by Rand McNally and is currently used by the
National Geographic Society.

**n**\ [*lon0/*]\ *scale* or **N**\ [*lon0/*]\ *width*

The projection is set with **n** or **N**. The central meridian is set with the
optional *lon0*, and the figure size is set with *scale* or *width*.

.. rubric:: Footnotes

.. [#f1] Robinson provided a table of y-coordinates for latitudes every 5°.
         To project values for intermediate latitudes one must interpolate
         the table. Different interpolants may result in slightly different
         maps. GMT uses the interpolant selected by the parameter
         :gmt-term:`GMT_INTERPOLANT` in the gmt.conf file.

.. GENERATED FROM PYTHON SOURCE LINES 27-33



.. image-sg:: /projections/misc/images/sphx_glr_misc_robinson_001.png
   :alt: misc robinson
   :srcset: /projections/misc/images/sphx_glr_misc_robinson_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Use region "d" to specify global region (-180/180/-90/90)
    fig.coast(region="d", projection="N12c", land="goldenrod", water="snow2", frame="afg")
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.522 seconds)


.. _sphx_glr_download_projections_misc_misc_robinson.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: misc_robinson.py <misc_robinson.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: misc_robinson.ipynb <misc_robinson.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
